--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <link rel="stylesheet" href="google.css">
 </head>
 <body>
-    
+    <header>
+            <img src="img/google.jpg" alt="">
+    </header>
+    <div>
+        <!-- ARAMA BUTONU -->
+        <div class="card"> 
+            <span>Search the web using Google!</span> <br>
+            <input class="search-box" type="text" value-size="40"> <br>
+            <input class="googleSearchBox" type="submit" value="Google Search">
+            <input class="lucky" type="submit" value="I'm feeling lucky"> 
+        </div>
+        <!-- /ARAMA BUTONU -->
+    <table class="group-block">
+        <td class="block1">
+            Special Searches <br>
+            <a href="https://web.archive.org/web/19990224014327/http://www.google.com/stanford"> Stanford Search</a> <br>
+            <a href="https://web.archive.org/web/19990221231654/http://www.google.com/linux"> Linux Search</a>
+        </td>
+        <td class="block2">
+            <a href="https://web.archive.org/web/19981202230410if_/http://www.google.com/help.html">Help!</a> <br>
+        <a href="https://web.archive.org/web/19981202230410if_/http://www.google.com/about.html">About Google!</a> <br>
+        <a href="https://web.archive.org/web/19981202230410if_/http://www.google.com/company.html">Company Info</a> <br>
+        <a href="https://web.archive.org/web/19981202230410if_/http://www.google.com/stickers.html">Google! Logos</a> <br>
+        </td>
+        <td class="block3">
+        Get Google! <br>
+        updates monthly: <br>
+        <input type="text" name="mail" value="your e-mail"> <br>
+        <input type="submit" name="sumbitaction" value="Subscribe">
+        <a href="https://web.archive.org/web/19990116224431/http://www.findmail.com/list/google-friends">Archive</a>
+        </td>
+    </table>
+    </div>
+    <footer>
+       <p class="son"> Copyright ©1998 Google Inc. </p> 
+    </footer>
 </body>
 </html>
